--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "nodemon ./server"
   },
   "private": true,
   "dependencies": {
@@ -24,11 +25,15 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "mongoose": "^5.7.10",
     "ng-zorro-antd": "^0.7.1",
-    "rxjs": "^5.5.6",
+    "nodemon": "^1.19.4",
+    "rxjs": "^5.5.12",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
